<resources>
    <string name="app_name">CST2355_Final_19W</string>
    <string name="menu_title_dict">Merriam Webster Dictionary</string>
    <string name="menu_title_newsfeed">News Feed</string>
    <string name="menu_title_flightstatus">Flight Status tracker</string>
    <string name="menu_title_nytimes">New York Times Article Search</string>
    <string name="buttomgotocheckflight">buttomgotocheckflight</string>
    <string name="greeting_newsFeed">WELCOME TO NEWS FEED</string>
    <string name="help_newsF">Help</string>
    <string name="searchText_newsF">Type here to search</string>
    <string name="goback">GO BACK</string>
    <string name="sbText">Search</string>
    <string name="author">Author: Linlin Cheng\n</string>
    <string name="versionNum">Version Number: 1.0\n</string>
    <string name="instructionTitle">Instruction:\n</string>
    <string name="instructionContent">1. This app has 4 main functions which are search, add to favorites, delete from favorites, and link to the original web.\n\n2. If clients want to read the whole article just clicking the item listed on the screen after searching and save it by simply clicking the save button if you want. \n\n3. Clicking the icons listed on the top, clients can go to different sections this app linked such as the icon with heart is for favorites and the plane icon is for checking airplane status. </string>
    <string name="deleteButton">DELETE</string>
    <string name="favor">FAVORITES</string>
    <string name="save">SAVE TO FAVORITES</string>
    <string name="nytimes_author">Author:leon</string>
    <string name="nytimes_version">Version:1.0</string>
    <string name="nytimes_instructon">instruction\n1.The saved articles will be displayed in list view.\n2.Click search button to start an article search in New York Times.\n3.Click an item in list view will open a browser to view the article.\n4.Click the switch in the end of each item in article list will save or delete the article.</string>
    <string name="nytimes_article_search_hint">Enter a keyword to start search</string>
    <string name="nytimes_saved_article">Saved articles</string>
    <string name="nytimes_article_saved">Saved</string>
    <string name="nytimes_article_not_saved">Not saved</string>
    <string name="nytimes_welcom_message">Welcome to New York Times!</string>
    <string name="nytimes_article_save_success_message">Article saved successfully!</string>
    <string name="nytimes_article_save_fail_message">Article save failed!</string>
    <string name="nytimes_article_delete_message">Article deleted!</string>
    <string name="instruction">instructions</string>
    <string name="flight_versionNumber">application version number 10</string>
    <string name="flight_instruction">application flight Instruction:input airportcode, then click BUTTONGOTOCHECKFLIGHT. You will see the airplane code and departing code
    click the airplane code. You will see the detail of the airplane</string>
    <string name="flight_help">flight help</string>
    <string name="nytimes_no_internet_connection">There is no internet connection!</string>
    <string name="dict_back">Go Back</string>
    <string name="dict_name">Name</string>
    <string name="dict_research">Recent search</string>
    <string name="dict_save">Saved</string>
    <string name="dict_research_back">BACK</string>
    <string name="dict_research_word">Enter text to search</string>
    <string name="dict_help">Help</string>
    <string name="dict_menu_search">Search</string>
    <string name="dict_intro">This dictionary is developed by Belle. Version No.1. To use this dictionary, go to the main page and click the dictionary icon on the top toolbar. Once there, just click the search button on the top dictionary toolbar to get inside. Once search dialogue show up, input the words you’d like to search in the dialogue, detailed information about the search work will come out.</string>
    <string name="dict_delete">delete</string>
    <string name="dict_helpdia">HELP</string>
    <string name="flight_save">flightsave</string>
    <string name="flight_delete">flightdelete</string>
    <string name="flight_author">application Author: Deyuan Liu</string>


    @string/flight_save"

</resources>