<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_dialog_newsfeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_nf_help"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/versionNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/versionNum"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instructionTile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructionTitle"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/instructionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructionContent"
            android:textSize="18dp"/>

    </LinearLayout>
</ScrollView>