<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/flight_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_flight_help"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/flight_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flight_author"/>

    <TextView
        android:id="@+id/flight_versionNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flight_versionNumber" />

    <TextView
        android:id="@+id/flight_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flight_instruction" />

</LinearLayout>