<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_newsF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <GridLayout
        android:id="@+id/search_newsF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_below="@id/toolbar_newsF">

        <EditText
            android:id="@+id/searchEdit_newsF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/searchText_newsF"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/sb_newsF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sbText"/>
    </GridLayout>

   <!--<ListView
        android:id="@+id/list_newsF"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_newsF"
        android:layout_above="@id/progressBar"/>-->

    <Button
        android:id="@+id/goback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/goback"/>

    <!--<ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_above="@id/goback"/>-->


</RelativeLayout>